<resources>
    <string name="app_name">Your Schedule</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name_of_lesson">Name of lesson</string>
    <string name="name_of_teacher">Teacher name</string>
    <string name="start_period_of_lesson">Start period of lesson</string>
    <string name="end_period_of_lesson">End period of lesson</string>
    <string name="name">Name</string>
    <string name="housing">corp.</string>
    <string name="classroom">aud.</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="begin_of_lesson">Begin of lesson</string>
    <string name="end_of_lesson">End of lesson</string>
    <string name="clear">Clear</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add_schedule_toolbar_title">Create lesson</string>
    <string name="homework_activity_title">Homework</string>
    <string name="calendar">Calendar</string>
    <string name="push">Push</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7743911822125060/2694759036</string>
    <string name="demands">Demanding</string>
    <string name="competence">Competence</string>
    <string name="desire_to_learn">The desire to learn</string>
    <string name="teacher_culture">Culture teacher</string>
    <string name="every_week_brc">(Weekly)</string>
    <string name="repeat">Repetition</string>
    <string name="type_and_number_of_lesson">The type and number of the lesson</string>
    <string name="time_reduction">hh:mm</string>
    <string name="date_reduction">dd.mm.yyyy</string>
    <string name="task">Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_internet_title">Whoops!</string>
    <string name="no_internet_description">No Internet connection found. Check your connection or try again.</string>
    <string name="manager">Manager</string>
    <string name="become_manager">Become manager</string>
    <string name="you_not_become_manager">You can\'t become an manager, because the manager is already</string>
    <string name="teachers">Teachers</string>
    <string name="share">Share</string>
    <string name="write_to_us">Write to us</string>
    <string name="open_group">Open our group</string>
    <string name="housing_hint">Housing</string>
    <string name="classroom_hint">Audience</string>
    <string name="log_out">Log out</string>
    <string name="delete_schedule">Delete schedule</string>
    <string name="no_teachers_yet">No teachers yet</string>
    <string name="no_events_yet">Not have events.</string>
</resources>