<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/people"
            android:title="@string/teachers"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/task"
            android:title="@string/task"/>

        <item
            android:id="@+id/nav_delete_schedule"
            android:icon="@drawable/delete"
            android:title="@string/delete_schedule"/>

        <item
            android:id="@+id/nav_write_to_us"
            android:icon="@drawable/manage"
            android:title="@string/write_to_us"/>

        <item
            android:id="@+id/open_group"
            android:icon="@drawable/vkontacte"
            android:title="@string/open_group"/>

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/log_out"
            android:title="@string/log_out"/>

    </group>
</menu>
