<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/silver_lite"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/snow"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <com.shedule.zyx.myshedule.widget.CustomEditText
            android:id="@+id/name_of_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:hint="@string/name_of_lesson"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <com.shedule.zyx.myshedule.widget.CustomEditText
                android:id="@+id/name_of_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                app:hint="@string/name_of_teacher"/>

            <ImageView
                android:layout_width="0dp"
                android:id="@+id/teachers_list"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/list"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/housing"/>

                <com.shedule.zyx.myshedule.widget.CustomEditText
                    android:id="@+id/housing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.8"
                    android:paddingRight="10dp"
                    app:hint="@string/housing_hint"
                    app:inputType="numberDecimal"
                    app:maxLength="5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.2"
                    android:src="@drawable/classroom"/>

                <com.shedule.zyx.myshedule.widget.CustomEditText
                    android:id="@+id/classroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    app:hint="@string/classroom_hint"
                    app:maxLength="10"/>
            </LinearLayout>

        </LinearLayout>

        <com.shedule.zyx.myshedule.widget.CustomTextView
            android:id="@+id/begin_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:time_text="@string/time_reduction"
            app:title_text="@string/begin_of_lesson"/>
            android:clickable="true"
            app:time_text="чч:мм"
            app:title_text="Начало пары"/>

        <com.shedule.zyx.myshedule.widget.CustomTextView
            android:id="@+id/end_time"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:time_text="@string/time_reduction"
            app:title_text="@string/end_of_lesson"/>

        <com.shedule.zyx.myshedule.widget.CustomTextView
            android:id="@+id/begin_period"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:time_text="@string/date_reduction"
            app:title_text="@string/start_period_of_lesson"/>

        <com.shedule.zyx.myshedule.widget.CustomTextView
            android:id="@+id/end_period"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:time_text="@string/date_reduction"
            app:title_text="@string/end_period_of_lesson"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/snow"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/repeat_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:src="@drawable/repeat"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/repeat"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/repeat_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:paddingLeft="5dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:gravity="right"
                android:text="@string/every_week_brc"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:alpha="0.1"
            android:background="@color/sch_green"/>

        <LinearLayout
            android:id="@+id/type_and_number_of_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:src="@drawable/list"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/type_and_number_of_lesson"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="@color/black"/>

</LinearLayout>