<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:padding="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/manager_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/you_not_become_manager"
        android:textColor="@color/black"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/manager_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email_login_btn"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingEnd="14dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingStart="14dp"
        android:paddingTop="10dp"
        tools:text="@string/become_manager"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.3"
        android:background="@color/sch_green"/>

</LinearLayout>