<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:mcv_arrowColor="@color/sch_dark_green"
        app:mcv_selectionColor="@color/sch_green"
        app:mcv_showOtherDates="all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="30dp">

        <TextView
            android:id="@+id/clear_dates"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            style="@style/DoneButtons"
            android:text="@string/clear"/>

        <TextView
            android:id="@+id/cancel_dates"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/DoneButtons"
            android:textSize="13sp"
            android:text="@string/cancel"/>

        <TextView
            android:id="@+id/approve_dates"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:gravity="center"
            style="@style/DoneButtons"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>